--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
-
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700" rel="stylesheet">
+
     <link rel="stylesheet" href="css/normalise.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <title><i class="fas fa-id-badge"></i>Startup</title>
   </head>
   <body>
     <header class="startup text-center text-white d-flex">
@@ -21,7 +21,7 @@
             <hr>
           </div>
           <div class="col-lg-12 my-auto">
-            <button class="btn btn-primary btn-xl">Find Out More</button>
+            <button class="btn btn-primary btn-xl">Find Out More<i class="fas fa-id-badge"></i></button>
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
 
     <script src="js/jQuery.min.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script> 
+    <script src="js/bootstrap.min.js"></script>
 
   </body>
 
